Preload file added

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,9 @@
   <link rel="stylesheet" href="../assets/css/global.css">
   <link rel="stylesheet" href="../assets/css/section.css">
   <link rel="stylesheet" href="../assets/css/demo.css">
-  
-  <!-- <script src="../node_modules/jquery/dist/jquery.js"></script>
-  <script src="../node_modules/propper/index.js"></script>
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
 
   <title>Configurator TOOL</title>
+  
 </head>
 
 <body>
@@ -57,13 +54,12 @@
     <img src="../assets/img/logoTecrea.png" class="fixed-bottom">
   </nav>
 
-  <main class="content js-content" id="content"></main>
+  <main class="content js-content" id="content">  </main>
   
+  <script src="Preload.js"></script>
   <script src="index.js"></script>
 
-  <script>
-      window.jQuery = window.$ = require('jquery');
-  </script>
+  <script>window.jQuery = window.$ = require('jquery'); </script>
   
   <script src="../node_modules/propper/index.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
