index.js serial port modification

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,10 @@
         <svg class="navMain-icon">
           <use xlink:href="../assets/img/icons.svg#icon-windows"></use>
         </svg>
-        Conenct
+        Connect
       </h5>
       <div class="navMain-buttons">
-        <button class="demo-button" id="connect-button">Conectar</button>
+        <button class="demo-button" id="connect-button">Connect</button>
       </div>
     </div>
 
