Tilt angle card modifated -> X and Y ranges were added and midrange was added on Vibration card

--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,12 @@
     </header>
 
     <div class="navMain-item u-category-windows">
-      <h5 class="navMain-category text-white">
+      <!-- <h5 class="navMain-category text-white">
         <svg class="navMain-icon text-white">
           <use xlink:href="../assets/img/icons.svg#icon-windows"></use>
         </svg>
         Connect
-      </h5>
+      </h5> -->
       <div class="navMain-buttons">
         <button class="demo-button text-white" id="connect-button">Connect</button>
       </div>
@@ -46,10 +46,10 @@
       <input type="text" id="device_connected" placeholder="Device" disabled>
     </div>
     
-    <footer class="navMain-footer">
+    <!-- <footer class="navMain-footer">
       <button type="button" id="button-about" data-modal="about" class="navMain-footer-button">About</button>
       <svg class="navMain-footer-icon"></svg>
-    </footer>
+    </footer> -->
 
     <img src="../assets/img/logoTecreaBlanco.png" class="fixed-bottom">
   </nav>
