update dashboard 2 and unplug dashboard added

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,8 @@
       </div>
     </div>
 
-    <div class="show-com text-white">
-      <label for="device_connected"> Device connected </label>
-      <input type="text" id="device_connected" placeholder="Device" disabled>
+    <div class="show-com">
+      <input type="text" id="device_connected" placeholder="Device connected" disabled>
     </div>
     
     <!-- <footer class="navMain-footer">
