--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="../assets/css/section.css">
   <link rel="stylesheet" href="../assets/css/demo.css">
 
-  <title>Configurator TOOL</title>
+  <title>Tecrea TOOL</title>
   
 </head>
 
@@ -23,7 +23,7 @@
 
   <nav class="navMain js-nav">
     <header class="navMain-header">
-      <h1 class="navMain-title text-white">Configurator <strong class="text-white">TOOL</strong></h1>
+      <h1 class="navMain-title text-white">Tecrea <strong class="text-white">TOOL</strong></h1>
       <svg class="navMain-header-icon text-white" >
         <use xlink:href="../assets/img/icons.svg#icon-electron"></use>
       </svg>
